tests/ok/format-print-u64.ari
fn main() -> i64 {
  println("u64={} zero={}", 18446744073709551615u64, 0u64);
  print!("small={} max={}\n", 7u64, 18446744073709551615u64);
  return 0;
}
