tests/errors/format-nonliteral.ari
fn main() -> i64 {
  let fmt = "{}";
  println(fmt, 1);
  return 0;
}
